Suppress Java 24 warnings